--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </h2>
 
           <!-- App Store バッジ（公式素材に差し替え推奨） -->
-          <a href="https://apps.apple.com" class="app-store-link" target="_blank" rel="noopener">
+          <a href="https://apps.apple.com/jp/app/my-furry-friends/id6755644406?l=en-US" class="app-store-link" target="_blank" rel="noopener">
             <img src="Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917 1.png" alt="Download on the App Store">
           </a>
 
@@ -89,25 +89,21 @@
           <a href="portfolio-marketing.html" class="work-bubble work-bubble--marketing">
             <!-- 例：assets/img/bubble-marketing.png -->
             <img src="assets/img/Marketing.png" alt="Marketing works" class="Marketing.png">
-            <span class="work-bubble-label">Marketing</span>
           </a>
 
           <!-- Creative -->
           <a href="portfolio-creative.html" class="work-bubble work-bubble--creative">
             <img src="assets/img/Creative.png" alt="Creative works" class="Creative.png">
-            <span class="work-bubble-label">Creative</span>
           </a>
 
           <!-- Branding -->
           <a href="portfolio-branding.html" class="work-bubble work-bubble--branding">
             <img src="assets/img/Branding.png" alt="Branding works" class="Branding.png">
-            <span class="work-bubble-label">Branding</span>
           </a>
 
           <!-- Produce -->
           <a href="portfolio-produce.html" class="work-bubble work-bubble--produce">
             <img src="assets/img/Produce.png" alt="Produce works" class="Produce.png">
-            <span class="work-bubble-label">Produce</span>
           </a>
         </div>
       </div>
