--- a/hairball-friends.html
+++ b/hairball-friends.html
@@ -77,19 +77,20 @@ Deep down, he’s the loneliest and loves being close to everyone.</p>
         </div>
 
         <div class="Moffuffu">
-          <h2>Muffuffu</h2>
-          <p>The giant tuxedo guardian with a tender heart.
-She has a habit of getting hairballs because she can’t groom her back very well.
-
-She loves food, naps, and watching the little Hairball Friends wander across his fur like an enchanted meadow.</p>
-          <p>Snuffy came from a difficult past, but his gentle spirit never faded.He became the quiet inspiration behind this world, a reminder that even small soft creatures deserve a place to feel safe.</p>
+          <h2>Moffuffu</h2>
+          <p>A wise, fluffy elder from long-haired fur.
+Calm, warm, and always ready with a soothing “moffuffu.”</p>
+         
           <img src="assets/img/moffuffu.png" alt="Moffuffu" class="Moffuffu">
         </div>
 
         <div class="Snuffy">
           <h2>Snuffy</h2>
-          <p>A wise, fluffy elder from long-haired fur.
-Calm, warm, and always ready with a soothing “moffuffu.”</p>
+          <p>The giant tuxedo guardian with a tender heart.
+She has a habit of getting hairballs because she can’t groom her back very well.
+
+She loves food, naps, and watching the little Hairball Friends wander across his fur like an enchanted meadow.</p>
+           <p>Snuffy came from a difficult past, but his gentle spirit never faded.He became the quiet inspiration behind this world, a reminder that even small soft creatures deserve a place to feel safe.</p>
           <img src="assets/img/Snuffy.png" alt="Snuffy" class="Snuffy">
         </div>
         
