--- a/about.html
+++ b/about.html
@@ -36,17 +36,13 @@
   <!-- ========== Hero Section ========== -->
   <main>
     <section class="hero">
-      <div class="hero-inner">
-        <img src="assets/img/FFS_Logo_about.png" alt="FSS logo" class="hero-character">
+      <div class="about-hero-inner">
+        <img src="assets/img/FFS_Logo_about.png" alt="FSS logo" class="about-FSS-Logo">
         </div>
 
-        <p class="hero-tagline">
-          FuwaFuwonder Studio is a tiny creative world shaped by softness, curiosity, and gentle imagination.
-It exists to make things that bring quiet joy, not for profit, not for competition, but simply because creating something warm can make someone’s day a little lighter.
-
-This studio believes in worlds where nobody feels hurt, rushed, or left behind.
-Everything here is made slowly, kindly, and with the hope that even one person might feel comforted by its existence.
-        </p>
+        <p class="about-hero-tagline">
+          FuwaFuwonder Studio is a tiny creative world shaped by softness, curiosity, and gentle imagination.<br>It exists to make things that bring quiet joy, not for profit, not for competition, but simply because creating something warm can make someone’s day a little lighter.<br>
+This studio believes in worlds where nobody feels hurt, rushed, or left behind.<br>Everything here is made slowly, kindly, and with the hope that even one person might feel comforted by its existence.</p>
       </div>
     </section>
 
@@ -58,31 +54,20 @@ Everything here is made slowly, kindly, and with the hope that even one person m
         <div class="works-grid">
           <!-- No Competition -->
           <h2>No Competition</h2>
-          <p>We don’t compete.
-
-Creativity grows best in a place without comparison, pressure, or winners.
-Ideas are allowed to stay soft here.</p>
+          <p>We don’t compete.<br>Creativity grows best in a place without comparison, pressure, or winners.<br>Ideas are allowed to stay soft here.</p>
           <img src="assets/img/No Competition.png" alt="No Competition" class="No Competition.png">
 
           <!--  No One Should Feel Hurt -->
-          <h2>Act for Others, Not for Gain</h2>
-          <p>Before making anything, we ask one question: “Will this make someone uncomfortable?”
-
-If yes, we choose a gentler path. Kindness is the rule of this world.</p>
+          <h2> No One Should<br>Feel Hurt</h2>
+          <p>Before making anything, we ask one question:<br>“Will this make someone uncomfortable?”<br>If yes, we choose a gentler path. <br>Kindness is the rule of this world.</p>
           <img src="assets/img/No One Should Feel Hurt.png" alt="No One Should Feel Hurt" class="_No One Should Feel Hurt.png">
 
           <!-- Act for Others, Not for Gain -->
-          <h2>Act for Others, Not for Gain</h2>
-          <p>We create for the sake of someone’s happiness, sometimes our own, sometimes a single person we care about.
-
-If it ends up brightening a stranger’s day, that’s enough reward.</p>
+          <h2>Act for Others,<br>Not for Gain</h2>
+          <p>We create for the sake of someone’s happiness, sometimes our own, sometimes a single person we care about.<br>If it ends up brightening a stranger’s day, that’s enough reward.</p>
           <img src="assets/img/Act for Others.png" alt="Act for Others" class="_Act for Others, Not for Gain.png">
           
-          <p class="value-tagline">
-          FuwaFuwonder Studio is not a business first, 
-it is a quiet refuge for soft ideas, warm stories, and creations made with care.
-Anyone who wanders into this world is welcome to stay as long as they like.
-        </p>
+          <p class="value-tagline">FuwaFuwonder Studio is not a business first,<br>it is a quiet refuge for soft ideas, warm stories, and creations made with care.<br>Anyone who wanders into this world is welcome to stay as long as they like.</p>
         </div>
       </div>
     </section>
