--- a/mff.html
+++ b/mff.html
@@ -51,29 +51,16 @@
     <!-- ========== Why I built This app ========== -->
     <section class="Why-I-built-this-app-section">
       <div class="Why-I-built-this-app">
-        <h2 class="Why-I-built-this-app-title">Why I Built This App</h2>
-        <p class="Why-I-built-this-app-text">My Furry Friends began with Snuffy.
-When I decided to bring her home, 
-I wanted a place where I could gently record her journey,
-from a difficult past into a soft, happy life.
-
-I also wished I could check on the pets I love:
-the cat and rabbit at my family home in Japan,
-and the animals my friends worry about when they’re away.
-Even with pet sitters, the quiet anxiety never fully disappears.
-
-So I wanted a small, safe space where I could keep my own memories
-and share real-time moments with the people who love their pets just as much.
-
-That wish became this app.</p>
-        <div class="Snuffy-photo">
-         <img src="assets/img/Snuffy_photo.png" alt="SnuffyPhoto">
+        <div class="Why-I-built-this-app-text">
+          <h2 class="Why-I-built-this-app-title">Why I Built This App</h2>
+          <p class="Why-I-built-this-app-text">My Furry Friends began with Snuffy.<br>When I decided to bring her home,<br>I wanted a place where I could gently record her journey,<br>from a difficult past into a soft, happy life.<br><br>I also wished I could check on the pets I love:<br>the cat and rabbit at my family home in Japan,<br>and the animals my friends worry about when they’re away.<br>Even with pet sitters, the quiet anxiety never fully disappears.<br><br>So I wanted a small, safe space where I could keep my own memories<br>and share real-time moments with the people who love their pets just as much.<br><br>That wish became this app.</p>
+        </div>
+        <div class="Snuffy-Meltan-photos">
+          <img src="assets/img/Snuffy_photo.png" alt="SnuffyPhoto">
+          <img src="assets/img/Meltan.png" alt="MeltanPhoto">
         </div>
         <div class="Romeo-photo">
-         <img src="assets/img/Romeo.png" alt="RomeoPhoto">
-        </div>
-        <div class="Meltan-photo">
-         <img src="assets/img/Meltan.png" alt="MeltanPhoto">
+          <img src="assets/img/Romeo.png" alt="RomeoPhoto">
         </div>
       </div>
     </section>  
