--- a/mff.html
+++ b/mff.html
@@ -95,25 +95,25 @@
       <div class="How-it-was-made">
         <h2 class="How-it-was-made-Title"> How it was made</h2>
         <h3 class="How-it-was-made-grid">Built with quiet craftsmanship, one soft step at a time.</h3>
-        <p class="How-it-was-made-text">Although My Furry Friends feels gentle on the surface, its world is supported by careful engineering and thoughtful design.
+        <p class="How-it-was-made-text">Although My Furry Friends feels gentle on the surface, its world is supported by careful engineering and thoughtful design.<br>
 The app was created slowly—through patient nights of adjusting, testing, and choosing only the elements that would keep the experience calm.</p>
         <h3 class="How-it-was-made-grid">Native foundations for a soft, natural feel.</h3>
-        <p class="How-it-was-made-text">The entire app is crafted natively in Swift and Xcode, so gestures feel light, screens respond instantly, and the experience stays as smooth as the world it represents.
+        <p class="How-it-was-made-text">The entire app is crafted natively in Swift and Xcode, so gestures feel light, screens respond instantly, and the experience stays as smooth as the world it represents.<br>
 Nothing is automated or templated, every part is intentionally shaped by hand.</p>
         <h3 class="How-it-was-made-grid">A private memory library beneath the surface.</h3>
-        <p class="How-it-was-made-text">Photos and updates settle into a quietly organized system built on Firebase.
-The database structure was designed to keep loading gentle and fast, even as memories accumulate.
+        <p class="How-it-was-made-text">Photos and updates settle into a quietly organized system built on Firebase.<br>
+The database structure was designed to keep loading gentle and fast, even as memories accumulate.<br>
 Timelines reflect real-time changes because pets live in real time, and their tiny moments deserve to appear just as they happen.</p>
         <h3 class="How-it-was-made-grid">Protected gates and layered safeguards.</h3>
-        <p class="How-it-was-made-text">To preserve the calm of this world, access is controlled through secure authentication, ensuring only invited people can enter.
-Behind the scenes, Firebase Security Rules act as silent shields, protecting each photo and preventing anything from being seen by someone it wasn’t meant for.
+        <p class="How-it-was-made-text">To preserve the calm of this world, access is controlled through secure authentication, ensuring only invited people can enter.<br>
+Behind the scenes, Firebase Security Rules act as silent shields, protecting each photo and preventing anything from being seen by someone it wasn’t meant for.<br>
 Peace in this world isn’t an accident, it’s maintained by design.</p>
         <h3 class="How-it-was-made-grid">Designed through reduction, not addition.</h3>
-        <p class="How-it-was-made-text">Creating MFF wasn’t about adding features; it was about removing everything that could disturb the softness.
-No likes, no rankings, no crowded interactions.
+        <p class="How-it-was-made-text">Creating MFF wasn’t about adding features; it was about removing everything that could disturb the softness.<br>
+No likes, no rankings, no crowded interactions.<br>
 Just the essential tools to record and share a quiet life without pressure or comparison.</p>
         <h3 class="How-it-was-made-grid">Shaped by the real lives who inspired it.</h3>
-        <p class="How-it-was-made-text">Every decision was guided by real animals and real concerns, Snuffy’s gentle journey into a new home, the pets at my family house, and the worries of friends checking on their companions from afar.
+        <p class="How-it-was-made-text">Every decision was guided by real animals and real concerns, Snuffy’s gentle journey into a new home, the pets at my family house, and the worries of friends checking on their companions from afar.<br>
 Their lives shaped the architecture, the design, and the way this world moves.</p>
         <h3 class="How-it-was-made-grid">A small, softly engineered world made with care.</h3>
         <p class="How-it-was-made-text">MFF may look simple, but the simplicity is deliberate, built from countless thoughtful choices
