--- a/about.html
+++ b/about.html
@@ -48,24 +48,29 @@ This studio believes in worlds where nobody feels hurt, rushed, or left behind.<
 
     <!-- ========== Explore Works Section ========== -->
     <section class="value-section">
-      <div class="values">
-        <h2 class="value-title">Values</h2>
-
-        <div class="works-grid">
-          <!-- No Competition -->
-          <h2>No Competition</h2>
-          <p>We don’t compete.<br><br>Creativity grows best in a place without comparison, pressure, or winners.<br>Ideas are allowed to stay soft here.</p>
-          <img src="assets/img/No Competition.png" alt="No Competition" class="No Competition.png">
-
-          <!--  No One Should Feel Hurt -->
-          <h2> No One Should<br>Feel Hurt</h2>
-          <p>Before making anything, we ask one question:<br>“Will this make someone uncomfortable?”<br><br>If yes, we choose a gentler path. <br>Kindness is the rule of this world.</p>
-          <img src="assets/img/No One Should Feel Hurt.png" alt="No One Should Feel Hurt" class="_No One Should Feel Hurt.png">
-
-          <!-- Act for Others, Not for Gain -->
-          <h2>Act for Others,<br>Not for Gain</h2>
-          <p>We create for the sake of someone’s happiness, sometimes our own, sometimes a single person we care about.<br><br>If it ends up brightening a stranger’s day, that’s enough reward.</p>
-          <img src="assets/img/Act for Others.png" alt="Act for Others" class="_Act for Others, Not for Gain.png">
+       <section class="value-section">
+        <div class="values">
+          <h2 class="value-title">Values</h2>
+          <div class="values-grid">
+            <!-- No Competition -->
+            <div class="value-item">
+              <img src="assets/img/No Competition.png" alt="No Competition">
+              <h3>No Competition</h3>
+              <p>We don’t compete.<br><br>Creativity grows best in a place without comparison, pressure, or winners.<br>Ideas are allowed to stay soft here.</p>
+            </div>
+            <!-- No One Should Feel Hurt -->
+            <div class="value-item">
+              <img src="assets/img/No One Should Feel Hurt.png" alt="No One Should Feel Hurt">
+              <h3>No One Should<br>Feel Hurt</h3>
+              <p>Before making anything, we ask one question:<br>“Will this make someone uncomfortable?”<br><br>If yes, we choose a gentler path.<br>Kindness is the rule of this world.</p>
+            </div>
+            <!-- Act for Others -->
+            <div class="value-item">
+              <img src="assets/img/Act for Others.png" alt="Act for Others">
+              <h3>Act for Others,<br>Not for Gain</h3>
+              <p>We create for the sake of someone’s happiness, sometimes our own, sometimes a single person we care about.<br><br>If it ends up brightening a stranger’s day, that’s enough reward.</p>
+            </div>           
+          </div>
         </div>
         <p class="value-tagline">FuwaFuwonder Studio is not a business first,<br>it is a quiet refuge for soft ideas, warm stories, and creations made with care.<br>Anyone who wanders into this world is welcome to stay as long as they like.</p>
     </section>
