--- a/about.html
+++ b/about.html
@@ -63,23 +63,25 @@ This studio believes in worlds where nobody feels hurt, rushed, or left behind.<
               </div>
             </div>
             <!-- No One Should Feel Hurt -->
-            <div class="value-item-left">
-              <div class="value-image-wrapper">
-                <img src="assets/img/No One Should Feel Hurt.png" alt="No One Should Feel Hurt">
-                <div class="value-text-left">
-                  <h2>No One Should<br>Feel Hurt</h2>
-                  <p>Before making anything, we ask one question:<br>“Will this make someone uncomfortable?”<br><br>If yes, we choose a gentler path.<br>Kindness is the rule of this world.</p>
+            <div class="values-bottom-row">
+              <div class="value-item-left">
+                <div class="value-image-wrapper">
+                  <img src="assets/img/No One Should Feel Hurt.png" alt="No One Should Feel Hurt">
+                  <div class="value-text-left">
+                    <h2>No One Should<br>Feel Hurt</h2>
+                    <p>Before making anything, we ask one question:<br>“Will this make someone uncomfortable?”<br><br>If yes, we choose a gentler path.<br>Kindness is the rule of this world.</p>
+                  </div>
                 </div>
               </div>
-            </div>
-            <!-- Act for Others -->
-            <div class="value-item-right">
-              <div class="value-image-wrapper">
-                <img src="assets/img/Act for Others.png" alt="Act for Others">
-                <div class="value-text-right">
-                  <h2>Act for Others,<br>Not for Gain</h2>
-                  <p>We create for the sake of someone’s happiness, sometimes our own, sometimes a single person we care about.<br><br>If it ends up brightening a stranger’s day, that’s enough reward.</p>
-                </div>         
+              <!-- Act for Others -->
+              <div class="value-item-right">
+                <div class="value-image-wrapper">
+                  <img src="assets/img/Act for Others.png" alt="Act for Others">
+                  <div class="value-text-right">
+                    <h2>Act for Others,<br>Not for Gain</h2>
+                    <p>We create for the sake of someone’s happiness, sometimes our own, sometimes a single person we care about.<br><br>If it ends up brightening a stranger’s day, that’s enough reward.</p>
+                  </div>              
+                </div>
               </div>
             </div>
           </div>
