--- a/hairball-friends.html
+++ b/hairball-friends.html
@@ -71,7 +71,7 @@ and together they try their best to build a peaceful, soft-hearted world.<br><br
         </div>
       </div>
 
-      <div class="Fuffuffu-container">
+      <div class="Moffuffu-container">
         <div class="Moffuffu">
           <h2>Moffuffu</h2>
           <p>A wise, fluffy elder from long-haired fur.<br>Calm, warm, and always ready with a soothing “moffuffu.”</p>
@@ -79,7 +79,7 @@ and together they try their best to build a peaceful, soft-hearted world.<br><br
         <img src="assets/img/moffuffu.png" alt="Moffuffu" class="Moffuffu">
       </div>
       
-      <div class="Fuffuffu-container">
+      <div class="Snuffy-container">
         <img src="assets/img/Snuffy.png" alt="Snuffy" class="Snuffy">
         <div class="Snuffy">
           <h2>Snuffy</h2>
