--- a/hairball-friends.html
+++ b/hairball-friends.html
@@ -87,7 +87,7 @@ and together they try their best to build a peaceful, soft-hearted world.<br><br
         </div>
       </div>
       <div class="Snufy-last-paragraph">
-        <p>Snuffy came from a difficult past, but his gentle spirit never faded.He became the quiet inspiration behind this world, a reminder that even small soft creatures deserve a place to feel safe.</p>
+        <p>Snuffy came from a difficult past, but her gentle spirit never faded. She became the quiet inspiration behind this world, a reminder that even small soft creatures deserve a place to feel safe.</p>
       </div>
     </section>
   </main>
