--- a/mff.html
+++ b/mff.html
@@ -36,14 +36,16 @@
   <!-- ========== Hero Section ========== -->
   <main>
     <section class="mff-hero">
-      <div class="mff-appicon">
-        <img src="assets/img/MFF_allicon_toppage.png" alt="MFF icon" class="MFF-appicon">      
-      </div>
-      <div class="mff-app-content">
+      <div class="mff-header">
+        <div class="mff-appicon">
+          <img src="assets/img/MFF_allicon_toppage.png" alt="MFF icon" class="MFF-appicon">    
+        </div>
+        <div class="mff-app-content">
           <img src="assets/img/MFF_logo_toppage.png" alt="My Furry Friends app icon" class="Mff-app-title">
           <a href="https://apps.apple.com/jp/app/my-furry-friends/id6755644406?l=en-US" class="MFF-app-store-link" target="_blank" rel="noopener">
             <img src="assets/img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917 1.png" alt="Download on the App Store">
           </a>
+        </div>
       </div>
       <p>My Furry Friends is a soft, private space to record your pets’ moments and share them in real time with the people who care.</p>
     </section>
