--- a/mff.html
+++ b/mff.html
@@ -80,7 +80,7 @@
           <p class="The-world-of-MFF-text">Every screen is simple, with warm spacing and calm colors.<br>The app doesn’t hurry you.<br>You can open it when you miss someone,<br>or when you want to record a small moment before it disappears.</p>
           <h3 class="The-world-of-MFF-grid">Where tiny companions watch over your memories.</h3>
           <p class="The-world-of-MFF-text">Muffuffu and the Hairball Friends were born to add softness to this world.<br>They aren’t mascots—they’re guardians of your moments,<br>making the space feel a little lighter, a little kinder.</p>
-        </dev>
+        </div>
         <div class="MFF-screenshots">
           <div calss="MFF-timeline">
             <img src="assets/img/Timeline.png" alt="TimelinePhoto">
