--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
   <main>
     <section class="hero">
       <div class="hero-inner">
-        <h1 class="hero-title">Where wonder starts moving.</h1>
+        <h1 class="hero-title">
+          <span data-lang="en">Where wonder starts moving.</span>
+          <span data-lang="jp">ときめきが動き出す場所。</span>
+        </h1>
 
         <div class="hero-characters">
           <img src="assets/img/fuffuffu.png" alt="Fuffuffu" class="hero-character">
@@ -47,7 +50,8 @@
         </div>
 
         <p class="hero-tagline">
-          A tiny creative world shaped by softness, curiosity, and small wonders.
+          <span data-lang="en">A tiny creative world shaped by softness, curiosity, and small wonders.</span>
+          <span data-lang="jp">ここはワクワクとふわふわが集まって生まれた小さな世界です。</span>
         </p>
       </div>
     </section>
