--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
       </nav>
     </div>
     <div class="language-switcher">
-      <button data-lang="en">EN</button>
+      <button data-lang-btn="en">EN</button>
       <span>·</span>
-      <button data-lang="jp">JP</button>
+      <button data-lang-btn="jp">JP</button>
     </div>
   </header>
 
