--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@ This studio believes in worlds where nobody feels hurt, rushed, or left behind.<
                   <div class="value-text-left">
                     <h2>
                       <span data-lang="en">No One Should<br>Feel Hurt</span>
-                      <span data-lang="jp">誰一人傷つけません。</span>
+                      <span data-lang="jp">誰も傷つけません</span>
                     </h2>
                     <p>
                       <span data-lang="en">Before making anything, we ask one question:<br>“Will this make someone uncomfortable?”<br><br>If yes, we choose a gentler path.<br>Kindness is the rule of this world.</span>
