--- a/world.html
+++ b/world.html
@@ -49,7 +49,7 @@ the quiet echo of music that lingers after the last note,<br>and the comfort of 
   <!-- ========== Colours of This World ========== -->
   <body>
     <section class="Colours-of-This-World">
-      <h2 class="Colours-of-This-World-Title">Colours if This World</h2>
+      <h2 class="Colours-of-This-World-Title">Colours of This World</h2>
       <p>Click a word to bring a little colour to this world.</p>
       <div class="Nurie">
         <img src="assets/img/nurie0.png" alt="Nurie0">
