--- a/mff.html
+++ b/mff.html
@@ -47,15 +47,24 @@
           </a>
         </div>
       </div>
-      <p>My Furry Friends is a soft, private space to record your pets’ moments and share them in real time with the people who care.</p>
+      <p>
+        <span data-lang="en">My Furry Friends is a soft, private space to record your pets’ moments and share them in real time with the people who care.</span>
+        <span data-lang="jp">My Furry Friendsはペットたちの日常の記録、そしてその小さな幸せをリアルタイムで家族や友人にお裾分けできるプライベートな空間を提供しているアプリです。</span>
+      </p>
     </section>
 
     <!-- ========== Why I built This app ========== -->
     <section class="Why-I-built-this-app-section">
       <div class="Why-I-built-this-app">
         <div class="Why-I-built-this-app-text">
-          <h2 class="Why-I-built-this-app-title">Why I Built This App</h2>
-          <p class="Why-I-built-this-app-text">My Furry Friends began with Snuffy.<br>When I decided to bring her home,<br>I wanted a place where I could gently record her journey,<br>from a difficult past into a soft, happy life.<br><br>I also wished I could check on the pets I love:<br>the cat and rabbit at my family home in Japan,<br>and the animals my friends worry about when they’re away.<br>Even with pet sitters, the quiet anxiety never fully disappears.<br><br>So I wanted a small, safe space where I could keep my own memories<br>and share real-time moments with the people who love their pets just as much.<br><br>That wish became this app.</p>
+          <h2 class="Why-I-built-this-app-title">
+            <span data-lang="en">Why I Built This App</span>
+            <span data-lang="jp">開発経緯</span>
+          </h2>
+          <p class="Why-I-built-this-app-text">
+            <span data-lang="en">My Furry Friends began with Snuffy.<br>When I decided to bring her home,<br>I wanted a place where I could gently record her journey,<br>from a difficult past into a soft, happy life.<br><br>I also wished I could check on the pets I love:<br>the cat and rabbit at my family home in Japan,<br>and the animals my friends worry about when they’re away.<br>Even with pet sitters, the quiet anxiety never fully disappears.<br><br>So I wanted a small, safe space where I could keep my own memories<br>and share real-time moments with the people who love their pets just as much.<br><br>That wish became this app.</span>
+            <span data-lang="jp">このアプリはスナフィーがきっかけとなって生まれました。<br>スナフィーを保護することを決めた時、<br>辛い環境を手放して幸せになるための人生を進んでいく様子をしっかり記録しておきたいと思いました。<br><br>それと同時に日本で暮らす大好きなうさぎと猫の様子をもっとたくさん見れたらいいなという気持ちがありました。<br>長期外出中にペットシッターを頼んでいるけれど、ペットたちの様子を心配している友人もいました。<br><br>そんな自分の願望を叶え、友人の不安を解消するために生まれたのがこのアプリです。<br>記録をとると同時に、家族や友人とその記録をリアルタイムで共有できる場所を、自分と友人のために作りました。</span>
+          </p>
         </div>
         <div class="Snuffy-Meltan-photos">
           <img src="assets/img/Snuffy_photo.png" alt="SnuffyPhoto">
@@ -71,15 +80,42 @@
     <section class="The-world-of-MFF-section">
       <div class="The-world-of-MFF">
         <div class="The-world-of-MFF-text">
-          <h2 class="The-world-of-MFF-Title"> The World of MFF</h2>
-          <h3 class="The-world-of-MFF-grid">A tiny, peaceful world built for quiet joy.</h3>
-          <p class="The-world-of-MFF-text">My Furry Friends isn’t a crowded social platform.<br>It’s a small, gentle space where moments stay soft, timelines stay calm,<br>and every photo feels like it has room to breathe.</p>
-          <h3 class="The-world-of-MFF-grid">A place without competition or noise.</h3>
-          <p class="The-world-of-MFF-text">There are no likes, scores, or rankings here.<br>Just simple, honest snapshots of the pets we love.<br>You can share real-time updates or quietly keep your own memories,<br>both are equally welcome.</p>
-          <h3 class="The-world-of-MFF-grid">Designed to make you feel at ease.</h3>
-          <p class="The-world-of-MFF-text">Every screen is simple, with warm spacing and calm colors.<br>The app doesn’t hurry you.<br>You can open it when you miss someone,<br>or when you want to record a small moment before it disappears.</p>
-          <h3 class="The-world-of-MFF-grid">Where tiny companions watch over your memories.</h3>
-          <p class="The-world-of-MFF-text">Muffuffu and the Hairball Friends were born to add softness to this world.<br>They aren’t mascots—they’re guardians of your moments,<br>making the space feel a little lighter, a little kinder.</p>
+          <h2 class="The-world-of-MFF-Title">
+            <span data-lang="en">The World of MFF</span>
+            <span data-lang="jp">MFFの大切にしていること</span>
+          </h2>
+          <h3 class="The-world-of-MFF-grid">
+            <span data-lang="en">A tiny, peaceful world built for quiet joy.</span>
+            <span data-lang="jp">小さな世界と小さな幸せ</span>
+          </h3>
+          <p class="The-world-of-MFF-text">
+            <span data-lang="en">My Furry Friends isn’t a crowded social platform.<br>It’s a small, gentle space where moments stay soft, timelines stay calm,<br>and every photo feels like it has room to breathe.</span>
+            <span data-lang="jp">MFFは従来のSNSではありません。<br>小さくて、柔らかく、穏やな空間を大切にしています。<br>
+          </p>
+          <h3 class="The-world-of-MFF-grid">
+            <span data-lang="en">A place without competition or noise.<br>
+            <span data-lang="jp">承認欲求に繋がる要素の排除</span>
+          </h3>
+          <p class="The-world-of-MFF-text">
+            <span data-lang="en">There are no likes, scores, or rankings here.<br>Just simple, honest snapshots of the pets we love.<br>You can share real-time updates or quietly keep your own memories,<br>both are equally welcome.</span>
+            <span data-lang="jp">このアプリには「いいね」「コメント」など一切の承認欲求に繋がる機能がありません。<br>第三者から自分のフレンド数を見ることもできません。<br>シンプルに自分の好きなペットの写真をただまとめる場所です。<br>友人や家族と共有しても、自分だけの場所として大切にしまうこともできます。</span>
+          </p>
+          <h3 class="The-world-of-MFF-grid">
+            <span data-lang="en">Designed to make you feel at ease.</span>
+            <span data-lang="jp">誰でも使いやすい設計</span>
+          </h3>
+          <p class="The-world-of-MFF-text">
+            <span data-lang="en">Every screen is simple, with warm spacing and calm colors.<br>The app doesn’t hurry you.<br>You can open it when you miss someone,<br>or when you want to record a small moment before it disappears.</span>
+            <span data-lang="jp">シンプルな設計を徹底し、温かい色味のデザインを意識しています。<br>このアプリは誰も焦らせません。<br>好きな時に好きなタイミングでご活用ください。<br>「可愛い」を補給したいときにタイムラインを見て、自分のペットの「可愛い」を残したい時にカメラ機能せ撮影してください。</span>
+          </p>
+          <h3 class="The-world-of-MFF-grid">
+            <span data-lang="en">Where tiny companions watch over your memories.</span>
+            <span data-lang="jp">小さくてふわふわの仲間たち</span>
+          </h3>
+          <p class="The-world-of-MFF-text">
+            <span data-lang="en">Muffuffu and the Hairball Friends were born to add softness to this world.<br>They aren’t mascots—they’re guardians of your moments,<br>making the space feel a little lighter, a little kinder.</span>
+            <span data-lang="jp">むっふっふはこの小さくて温かい空間から生まれました。<br>マスコットキャラクターとよりも、この空間がより暖かく、明るくなるようにを見守ってくれている存在です。<br>
+          </p>
         </div>
         <div class="MFF-screenshots">
           <img src="assets/img/Timeline.png" alt="TimelinePhoto">
@@ -91,37 +127,75 @@
  <!-- ========== How it works ========== -->
     <section class="How-it-was-made-section">
       <div class="How-it-was-made">
-        <h2 class="How-it-was-made-Title"> How it was made</h2>
-        <h3 class="How-it-was-made-grid">Built with quiet craftsmanship, one soft step at a time.</h3>
-        <p class="How-it-was-made-text">Although My Furry Friends feels gentle on the surface, its world is supported by careful engineering and thoughtful design.<br>
-The app was created slowly—through patient nights of adjusting, testing, and choosing only the elements that would keep the experience calm.</p>
-        <h3 class="How-it-was-made-grid">Native foundations for a soft, natural feel.</h3>
-        <p class="How-it-was-made-text">The entire app is crafted natively in Swift and Xcode, so gestures feel light, screens respond instantly, and the experience stays as smooth as the world it represents.<br>
-Nothing is automated or templated, every part is intentionally shaped by hand.</p>
-        <h3 class="How-it-was-made-grid">A private memory library beneath the surface.</h3>
-        <p class="How-it-was-made-text">Photos and updates settle into a quietly organized system built on Firebase.<br>
-The database structure was designed to keep loading gentle and fast, even as memories accumulate.<br>
-Timelines reflect real-time changes because pets live in real time, and their tiny moments deserve to appear just as they happen.</p>
-        <h3 class="How-it-was-made-grid">Protected gates and layered safeguards.</h3>
-        <p class="How-it-was-made-text">To preserve the calm of this world, access is controlled through secure authentication, ensuring only invited people can enter.<br>
-Behind the scenes, Firebase Security Rules act as silent shields, protecting each photo and preventing anything from being seen by someone it wasn’t meant for.<br>
-Peace in this world isn’t an accident, it’s maintained by design.</p>
-        <h3 class="How-it-was-made-grid">Designed through reduction, not addition.</h3>
-        <p class="How-it-was-made-text">Creating MFF wasn’t about adding features; it was about removing everything that could disturb the softness.<br>
-No likes, no rankings, no crowded interactions.<br>
-Just the essential tools to record and share a quiet life without pressure or comparison.</p>
-        <h3 class="How-it-was-made-grid">Shaped by the real lives who inspired it.</h3>
-        <p class="How-it-was-made-text">Every decision was guided by real animals and real concerns, Snuffy’s gentle journey into a new home, the pets at my family house, and the worries of friends checking on their companions from afar.<br>
-Their lives shaped the architecture, the design, and the way this world moves.</p>
-        <h3 class="How-it-was-made-grid">A small, softly engineered world made with care.</h3>
-        <p class="How-it-was-made-text">MFF may look simple, but the simplicity is deliberate, built from countless thoughtful choices
-so that the world you see can remain peaceful, and the memories you keep can stay warm.</p>
+        <h2 class="How-it-was-made-Title">
+          <span data-lang="en">How it was made</span>
+          <span data-lang="jp">開発について</span>
+        </h2>
+        <h3 class="How-it-was-made-grid">
+          <span data-lang="en">Built with quiet craftsmanship, one soft step at a time.</span>
+          <span data-lang="jp">柔らかい空間演出を支える技術</span>
+        </h3>
+        <p class="How-it-was-made-text">
+          <span data-lang="en">Although My Furry Friends feels gentle on the surface, its world is supported by careful engineering and thoughtful design.<br>The app was created slowly—through patient nights of adjusting, testing, and choosing only the elements that would keep the experience calm.</span>
+          <span data-lang="jp">MFFの柔らかい空間は、考え抜かれたデザインと緻密な設計によって作られています。<br>テストと調整を何度も繰り返し、根気強くデザインの柔らかさと誰も迷わずに使える仕様をとことん追求しました。</span>        
+        </p>
+        <h3 class="How-it-was-made-grid">
+          <span data-lang="en">Native foundations for a soft, natural feel.</span>
+          <span data-lang="jp">柔らかさと自然を織り込んだネイティブ設計</span>
+        </h3>
+        <p class="How-it-was-made-text">
+          <span data-lang="en">The entire app is crafted natively in Swift and Xcode, so gestures feel light, screens respond instantly, and the experience stays as smooth as the world it represents.<br>Nothing is automated or templated, every part is intentionally shaped by hand.</span>
+          <span data-lang="jp">このアプリはxcodeのSwiftを使って設計されています。それによってスムーズな起動と軽いレスポンスを実現しています。<br>自動化やテンプレート化は一切行われず、すべてのパーツが意図的に手作業で形作られています。</span>
+        </p>
+        <h3 class="How-it-was-made-grid">
+          <span data-lang="en">A private memory library beneath the surface.</span>
+          <span data-lang="jp">プライベートはフォトアルバム</span>
+        </h3>
+        <p class="How-it-was-made-text">
+          <span data-lang="en">Photos and updates settle into a quietly organized system built on Firebase.<br>The database structure was designed to keep loading gentle and fast, even as memories accumulate.<br>Timelines reflect real-time changes because pets live in real time, and their tiny moments deserve to appear just as they happen.</span>
+          <span data-lang="jp">撮影した写真は全てFirebaseに保存されます。<br>データベースは保存された写真を正確に読み込み、書き出せるように構造化しています。<br>タイムライン上の写真はリアルタイムで反映され、どの子の「可愛い」の瞬間も見逃しません。</span>
+        </p>
+        <h3 class="How-it-was-made-grid">
+          <span data-lang="en">Protected gates and layered safeguards.</span>
+          <span data-lang="jp">暗号化によってセキュリティを強化</span>
+        </h3>
+        <p class="How-it-was-made-text">
+          <span data-lang="en">To preserve the calm of this world, access is controlled through secure authentication, ensuring only invited people can enter.<br>Behind the scenes, Firebase Security Rules act as silent shields, protecting each photo and preventing anything from being seen by someone it wasn’t meant for.<br>Peace in this world isn’t an accident, it’s maintained by design.</span>
+          <span data-lang="jp">穏やかな空間を守るために、アプリ外からのデータへのアクセスを完全に排除しています。<br>ユーザー体験を変えないことを条件に、バックエンドでFirebaseの認証機能とセキュリティルールを組み合わせて実装したことで柔らかい空間を十分に守ることができています。</span>
+        </p>
+        <h3 class="How-it-was-made-grid">
+          <span data-lang="en">Designed through reduction, not addition.</span>
+          <span data-lang="jp">足し算よりも引き算の美学</span>
+        </h3>
+        <p class="How-it-was-made-text">
+          <span data-lang="en">Creating MFF wasn’t about adding features; it was about removing everything that could disturb the softness.<br>No likes, no rankings, no crowded interactions.<br>Just the essential tools to record and share a quiet life without pressure or comparison.</span>
+          <span data-lang="jp">MFFは柔らかい世界観を妨げる機能をt徹底的に排除しています。<br>第三者からの目を気にするきっかけになりうる「いいね」「コメント」「表示回数」「フレンド数」などの機能は全て意図的に外しています。<br>誰かから承認を得るためではなく、ただ自分のために自分の好きなものを大切にするために必要な素うそだけを取り入れています。</span>
+        </p>
+        <h3 class="How-it-was-made-grid">
+          <span data-lang="en">Shaped by the real lives who inspired it.</span>
+          <span data-lang="jp">小さな日常から誕生した作品</span>
+        </h3>
+        <p class="How-it-was-made-text">
+          <span data-lang="en">Every decision was guided by real animals and real concerns, Snuffy’s gentle journey into a new home, the pets at my family house, and the worries of friends checking on their companions from afar.<br>Their lives shaped the architecture, the design, and the way this world moves.</span>
+          <span data-lang="jp">全ての機能とデザインは実生活の中での小さな幸せと小さな不安から生まれました。スナフィーのお引越し、遠くで家族と暮らすペットたち、そして友人の小さな不安。<br>そんな小さな物語がこのアプリのデザイン、仕様に直結しています。</span>
+        </p>
+        <h3 class="How-it-was-made-grid">
+          <span data-lang="en">A small, softly engineered world made with care.</span>
+          <span data-lang="jp">柔らかい技術から生まれた小さな世界</span>
+        </h3>
+        <p class="How-it-was-made-text">
+          <span data-lang="en">MFF may look simple, but the simplicity is deliberate, built from countless thoughtful choices, so that the world you see can remain peaceful, and the memories you keep can stay warm.</span>
+          <span data-lang="jp">MFFのシンプルな仕様は、全て意図的に作られたのもで、その裏には数えきれないほどの選択があることで、平和な世界観と温かいユーザー体験が維持されています。</span>
+        </p>
       </div>
     </section>  
     
  <!-- ========== まとめ ========== -->
     <section class="MFF-Thankyou">
-      <h2 class="MFF-Thakyou">Thank you for wandering into this small, gentle world.</h2>
+      <h2 class="MFF-Thakyou">
+        <span data-lang="en">Thank you for wandering into this small, gentle world.</span>
+        <span data-lang="jp">この小さい世界に興味を持っていただきありがとうございます。</span>
+      </h2>
       <div class="MFFpage-last-Muffuffu">
         <img src="assets/img/muffuffu.png" alt="Muffuffu-thankyou" class="muffuffu-thankyou">
       </div>
