--- a/world.html
+++ b/world.html
@@ -40,17 +40,24 @@
         <img src="assets/img/Minami.png" alt="Minami-image">
       </div>
       <div class="Minami-text">
-        <p>FuwaFuwonder is a small world shaped by many gentle things.<br>Quiet moments, kind people, soft animals, the quiet lessons gathered from many experiences, and the warmth that has gathered around me.<br><br>
-This world wasn’t created through a grand plan.<br>It simply grew, softly and slowly, from the environment and kindness surrounding me.<br>Friends who care deeply, pets who speak through their eyes,<br>the calm of snow-covered mountains, games that spark curiosity,<br>
-the quiet echo of music that lingers after the last note,<br>and the comfort of a warm meal.<br><br>All of these became colours in this world.</p>
+        <p>
+          <span data-lang="en">FuwaFuwonder is a small world shaped by many gentle things.<br>Quiet moments, kind people, soft animals, the quiet lessons gathered from many experiences, and the warmth that has gathered around me.<br><br>This world wasn’t created through a grand plan.<br>It simply grew, softly and slowly, from the environment and kindness surrounding me.<br>Friends who care deeply, pets who speak through their eyes,<br>the calm of snow-covered mountains, games that spark curiosity,<br>the quiet echo of music that lingers after the last note,<br>and the comfort of a warm meal.<br><br>All of these became colours in this world.</span>
+          <span data-lang="jp">Fuwa Fuwonderはたくさんの人の温かさから生まれた小さな世界です。<br>静かな時間の流れ、優しい人たち、可愛い動物たち、様々な経験から受け取った温かさや優しさが元になっています。<br><br>壮大な計画によって生まれたものではありません。<br>私の周りにあった、シンプルで、ふわふわ、ワクワク、そして暖かいものから生まれました。<br>友人や家族の優しさ、マーケティングの仕事、ペットからの愛情、カナダでの生活、<br>スノーボードに行くと見る雪山の景色、好奇心を刺激するゲーム、楽器演奏から生まれる表現の方法。<br>そんなたくさんの「好き」がこの世界を鮮やかにしてくれています。</span>
+        </p>
       </div>
   </main>
 
   <!-- ========== Colours of This World ========== -->
   <body>
     <section class="Colours-of-This-World">
-      <h2 class="Colours-of-This-World-Title">Colours of This World</h2>
-      <p>Click a word to bring a little colour to this world.</p>
+      <h2 class="Colours-of-This-World-Title">
+        <span data-lang="en">Colours of This World</span>
+        <span data-lang="jp">この世界を色付けるもの</span>
+      </h2>
+      <p>
+        <span data-lang="en">Click a word to bring a little colour to this world.</span>
+        <span data-lang="jp">下の言葉をクリックしてこの世界に色をつけてください</span>
+      </p>
       <div class="Nurie">
         <img src="assets/img/nurie0.png" alt="Nurie0">
         <div class="Nurie-marketing">
@@ -94,7 +101,10 @@ the quiet echo of music that lingers after the last note,<br>and the comfort of 
       </div>
     </section>
     <section class="What_makes_this_world_last_paragraph">
-      <p>Every person who has touched this place left a colour behind.<br>And those colours became its warmth.<br>Thank you for being part of this world.</p>
+      <p>
+        <span data-lang="en">Every person who has touched this place left a colour behind.<br>And those colours became its warmth.<br>Thank you for being part of this world.</span>
+        <span data-lang="jp">この場所を明るく色付けてくれている全ての人とものの暖かさと優しさに感謝を忘れず、<br>今度は自分がそんな暖かい存在になれるように試行錯誤していきたいです。</span>
+      </p>
     </section>
 
     
