--- a/maintenance.html
+++ b/maintenance.html
@@ -37,7 +37,10 @@
   <main>
     <section class="hero">
       <div class="hero-inner">
-        <h1 class="hero-title">Hold on!<br>The fluff crew is working hard.</h1>
+        <h1 class="hero-title">
+          <span data-lang="en">Hold on!<br>The fluff crew is working hard.</span>
+          <span data-lang="jp">ただいまこのページは工事中です。</span>
+        </h1>
         <div class="maintenance">
           <img src="assets/img/Site maintenence.png">
         </div>
